# AI-Interview-Assistant

./: .gitignore  README.md  main.py  pyproject.toml
api/: api_utils.py  app.py  mongo.py
frontend/: api_response.py  main.py  speech_to_text.py  text_to_speech.py  upload_file.py
