[project]
name = "ai-interview-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt==3.2.0",
    "elevenlabs>=2.7.1",
    "fastapi>=0.116.1",
    "gtts>=2.5.4",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "passlib[bcrypt]>=1.7.4",
    "playsound==1.2.2",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "pymongo>=4.13.2",
    "pymupdf>=1.26.3",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "streamlit>=1.47.0",
    "streamlit-authenticator==0.2.2",
    "uvicorn>=0.35.0",
]
